# image-hosting-service

./: .env.example  .gitignore  Makefile
apps/backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml
apps/backend/docker/: entrypoint.sh
apps/backend/src/: main.py
apps/backend/src/core/: __init__.py  config.py  logger.py  providers.py
apps/backend/src/core/database/: __init__.py  engine.py  uow.py
apps/backend/src/core/database/base/: __init__.py  model.py  repository.py  schema.py
apps/backend/src/core/database/migrations/: env.py
apps/backend/src/modules/users/: models.py  provider.py  repository.py  schemas.py  service.py
apps/backend/src/presentation/api/routes/: __init__.py
docs/: db.drawio
